clusters/homelab/storage/minio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: storage
  labels:
    expose-public: "true"
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
