clusters/homelab/storage/minio/httproute-console.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
  namespace: storage
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - minio.internal.tylerrosnett.com
  rules:
    - backendRefs:
        - name: minio-console
          port: 9001
