clusters/homelab/storage/minio/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-s3
  namespace: storage
spec:
  parentRefs:
    - name: cf-tunnel
      namespace: kube-system
  hostnames:
    - files.tylerrosnett.com
  rules:
    - backendRefs:
        - name: minio
          port: 9000
