clusters/homelab/storage/minio/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: minio-ingress
  namespace: storage
spec:
  endpointSelector:
    matchLabels:
      app: minio
  ingress:
    - fromEntities:
        - ingress
        - host
        - remote-node
